# NebulaRaid

./: .gitignore  AViewState.h  BaseCharacter.cpp  BaseCharacter.h  Bullet.cpp  Bullet.h  BulletHell.cpp  BulletHell.sln  BulletHell.vcxproj  BulletHell.vcxproj.filters  CMakeLists.txt  Enemy.cpp  Enemy.h  EnemyBullet.cpp  EnemyBullet.h  EnemyShot.cpp  EnemyShot.h  GameObject.h  IGameState.h  IPool.h  Level1State.cpp  Level1State.h  LevelLoader.h  Player.cpp  Player.h  PlayerBullet.cpp  PlayerBullet.h  PlayerShot.cpp  PlayerShot.h  README.md  Shot.cpp  Shot.h  SpatialGrid.cpp  SpatialGrid.h  StateManager.h  TestState.cpp
assets/: Cosas que hacer.txt
json/: enemy_types.json  lvl1.json  lvl2.json  lvl3.json  lvl4.json  lvl5.json  lvlTemplate.json  scores.json
src/behaviors/: BasicAttackBehavior.cpp  BasicAttackBehavior.h  BasicRetreatBehavior.cpp  BasicRetreatBehavior.h  BerserkerAttack.cpp  BerserkerAttack.h  BerserkerMovement.cpp  BerserkerMovement.h  BerserkerMovementMode.h  EnterTopBehavior.cpp  EnterTopBehavior.h  IAttackBehavior.h  IMovementBehavior.h  LateralMovement.cpp  LateralMovement.h  PrecisionAttack.cpp  PrecisionAttack.h  RandomMovement.cpp  RandomMovement.h  StaticMovement.cpp  StaticMovement.h  TurretAttack.cpp  TurretAttack.h
src/core/: BaseCharacter.cpp  BaseCharacter.h  GameObject.cpp  GameObject.h  Pool.h  SpatialGrid.cpp
src/entities/: Bullet.cpp  Bullet.h  Enemy.cpp  Enemy.h  Player.cpp  Player.h
src/factory/: EnemyFactory.cpp  EnemyFactory.h
src/state/: GameOverState.h  (+18 more)
tests/: CMakeLists.txt  PoolTests.cpp  doctest.h  raylib.h  raymath.h
(+10 files in other folders)
